[package]
edition = "2018"
name = "js-sys-futures"
version = "0.0.0"
authors = ["<hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/hvithrafn/js-sys-futures"
description = """
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
futures = { package = "futures-lite", version = "1.11" }
js-sys = "0.3"
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[workspace]
members = [".", "xtask"]
default-members = ["."]
