[package]
edition = "2018"
name = "js-sys-futures"
version = "0.3.0"
authors = ["<hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/hvithrafn/js-sys-futures"
description = """
Utilities for working with the futures and js-sys crates.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
js-sys = "0.3"
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
